# reddit_to_lemmy_reposter

./: .gitignore  .vimspector.json  Cargo.toml  README.md  fosttalicska.txt  posted_to_lemmy.txt  secrets.txt
src/: command_args.rs  main.rs  statics.rs
src/api_callers/: mod.rs
src/api_callers/lemmy/: lemmy.rs  mod.rs
src/api_callers/reddit/: mod.rs  reddit.rs  reddit_caller.rs
src/structs/: command_args.rs  mod.rs  post.rs
