[package]
name = "reddit_to_lemmy_reposter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.29.0", features = ["full"] } # for our async runtime
serde = "1.0.171"
random-string = "1.0.0"
serde_json = "1.0.102"
url = "2.4.0"
oauth2 = "4.4.1"
net = "0.1.0"
open = "5.0.0"
anyhow = "1.0.71"
hyper = { version = "0.14.27", features = ["server"] }
lemmy_api_common = "0.18.2"
reqwest-middleware = "0.2.2"
once_cell = "1.18.0"
